PVWEB-1009 |feat| fix working on mobile

--- a/components/organisms/Header/partials/MainNavigationLevel/styles/MainNavLinkSecondary.scss
+++ b/components/organisms/Header/partials/MainNavigationLevel/styles/MainNavLinkSecondary.scss
@@ -73,9 +73,6 @@
     @apply tw-w-1/2;
     @apply tw-pl-8 tw-pt-4;
     padding-bottom: 88px;
-    max-height: calc(
-      100vh - 200px
-    ); // subtract 200px for header height and 48px for the space under the nav
 
     &__element {
       @apply tw-border-b-0;
